Migrate from mongodb to postgres